creating PUT/visits/<visit_id> endpoint
